:rocket: 2nd commit

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,12 +9,14 @@ packages = [
 
 [tool.poetry.dependencies]
 python = "^3.11"
+pandas = "^2.2.3"
 
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.3.4"
 ruff = "^0.9.9"
 cookiecutter = "^2.6.0"
+pre-commit = "^4.2.0"
 
 [build-system]
 requires = ["poetry-core"]
@@ -27,3 +29,6 @@ add_problem = "automation.add_problem:run"
 testpaths = [
     "rogue",
 ]
+
+[tool.ruff]
+exclude = ["automation"]
